--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import '~antd/dist/antd.css';
 
 *{
   font-family: 'Poppins', sans-serif;
+}
+.img-carousel{
+  border-radius: 15px;
+  background-position: center;
+  background-size: 'cover';
 }
