--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,22 @@
   font-size: 0.8rem;
 }
 
+.Ctitle{
+    opacity: 0;
+}
+/* .title:hover{
+  color:#fff !important;
+  opacity: 1;
+} */
 
+.aa:hover + .Ctitle{
+    color:#fff !important;
+    cursor: pointer !important;
+    opacity: 1;
+   
+   
+    background-color: rgba(37, 37, 37, 0.3);
+} 
 
 .my-masonry-grid {
   display: -webkit-box; /* Not needed if autoprefixing */
@@ -46,7 +61,8 @@
 
 /* Style your items */
 .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
-  background: grey;
+  background: red;
+  width:100%;
   margin-bottom: 30px;
 }
 
@@ -68,10 +84,14 @@
   }
 }
 
-@media(max-width:1024px){
-  .title{
+@media(min-width:1024px){
+  .Ctitle{
     font-size: 2rem !important;
     }
+}
+
+@media(max-width:1024px){
+ 
     .des{
       font-size: 1rem !important;
     }
