--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@
 
 /* Style your items */
 .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
-  background: red;
+ 
   width:100%;
   margin-bottom: 30px;
 }
@@ -85,6 +85,35 @@
 .mobile{
   display: none;
 }
+}
+
+@media(max-width:567px){
+  .pWrapper{
+    padding:5px;
+    flex-direction: column;
+  }
+  
+  .pimage{
+    height: 40vh !important;
+  }
+.pinfo{
+  padding:3px !important;
+}
+  .pfilter{
+    width: 100% !important;
+  }
+  .paddtocart{
+    width: 100% !important;
+  }
+  .fc{
+    flex-direction: column;
+  }
+  .center{
+    display: none;
+  }
+  .right{
+    background-color: "#fff8f8"
+  }
 }
 
 @media(min-width:768px){
